# phoenix

./: docker-compose.yaml  otel-collector-config.yaml  pyproject.toml
app/: config.py  main.py  otel_config.py  phoenix_config.py  shared.py  workflow.py  workflow_custom.py  workflow_llama.py
scripts/: ddtrace_to_otlp_test.py
